--- a/package.json
+++ b/package.json
@@ -17,12 +17,7 @@
     "build": "cross-env VUE_APP_PUBLIC_PATH=\"/%BASE_PATH%/\" vue-cli-service build",
     "dev": "npm run serve",
     "lint": "vue-cli-service lint",
-    "serve": "cross-env VUE_APP_URL_BASE_API=http://localhost:5678/ vue-cli-service serve",
-    "test": "npm run test:unit",
-    "tslint": "tslint -p tsconfig.json -c tslint.json",
-    "tslintfix": "tslint --fix -p tsconfig.json -c tslint.json",
-    "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "serve": "cross-env VUE_APP_URL_BASE_API=http://localhost:5678/ vue-cli-service serve"
   },
   "dependencies": {
     "timeago.js": "^4.0.2",
@@ -43,25 +38,16 @@
     "@types/node": "^14.14.40",
     "@types/quill": "^2.0.1",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
-    "@typescript-eslint/parser": "^2.13.0",
     "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-eslint": "^4.1.2",
     "@vue/cli-plugin-typescript": "~4.5.6",
     "@vue/cli-plugin-unit-jest": "^4.1.2",
     "@vue/cli-service": "^3.11.0",
-    "@vue/eslint-config-standard": "^5.0.1",
-    "@vue/eslint-config-typescript": "~5.0.1",
     "@vue/test-utils": "^1.0.0-beta.24",
     "axios": "^0.21.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
     "dateformat": "^3.0.3",
     "element-ui": "~2.13.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-vue": "^6.1.1",
     "file-saver": "^2.0.2",
     "flatted": "^2.0.0",
     "jquery": "^3.4.1",
